--- a/docusaurus/docs/protocol/primitives/probabilistic_proofs/Probabilistic_proofs_coverage.ipynb
+++ b/docusaurus/docs/protocol/primitives/probabilistic_proofs/Probabilistic_proofs_coverage.ipynb
@@ -2,32 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import datetime\n",
     "from copy import deepcopy\n",
-    "\n",
-    "from scipy import stats\n"
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Minimum stake = Penalty\n",
+    "# Governance params\n",
+    "\n",
+    "## Minimum stake = Penalty\n",
     "SupplierMinStake = 2e3 # POKT\n",
-    "# Total POKT that can be claimed without requiering mandatory proof\n",
+    "\n",
+    "## Total POKT that can be claimed without requiring mandatory proof\n",
     "ProofRequirementThreshold = 20 # POKT\n",
-    "# Probability that a claim below the threshold will requiere proof\n",
+    "\n",
+    "## Probability that a claim below the threshold will require proof\n",
     "ProofRequestProbability = 0.001"
    ]
   },
@@ -45,15 +44,15 @@
     }
    ],
    "source": [
-    "# This is the expected number of claims before being requested for a proof\n",
+    "# Expected number of claims before being requested a proof\n",
     "# According to https://en.wikipedia.org/wiki/Geometric_distribution (mode 0)\n",
     "E_false_claims_before_proof = (1-ProofRequestProbability) / ProofRequestProbability\n",
     "\n",
-    "# For ease calculations we will use the scipy implementation \n",
+    "# For ease calculations we will use the scipy implementation\n",
     "# https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.geom.html\n",
     "\n",
     "# Here we show that both achieve the same mean, more testing in the appendix\n",
-    "print(f\"Expected claims passed before begin requiederd a proof: {E_false_claims_before_proof} (same with scypi: {stats.geom.mean(ProofRequestProbability, loc=-1)})\")"
+    "print(f\"Expected claims passed before begin required a proof: {E_false_claims_before_proof} (same with scypi: {stats.geom.mean(ProofRequestProbability, loc=-1)})\")"
    ]
   },
   {
@@ -227,7 +226,7 @@
    "source": [
     "# Now we calculate the proffit of the attacker, that will be equal to the number\n",
     "# of samples passed before the requested proof, multiplied by the maximum reward\n",
-    "# that can be claimed without mandatory proof and minus the slashing of the \n",
+    "# that can be claimed without mandatory proof and minus the slashing of the\n",
     "# missing proof\n",
     "attacker_proffit_E = np.sum(ProofRequirementThreshold*attackers_sample)-samples*Slash_E\n",
     "attacker_proffit_COVERAGE = np.sum(ProofRequirementThreshold*attackers_sample)-samples*Slash_COVERAGE\n",
@@ -252,7 +251,7 @@
     }
    ],
    "source": [
-    "# While I cheatead a little by setting the seed to a case where this happens, it \n",
+    "# While I cheatead a little by setting the seed to a case where this happens, it\n",
     "# is only to highlight that using the expected number of trials is bad coverage.\n",
     "# Why? because the expected proffit is zero, but the variance is high\n",
     "\n",
@@ -425,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.10"
   },
   "orig_nbformat": 4
  },
